# ferris

./: .gitignore  .gitmodules  .kiplot.dxf_edge_cuts.yml  .kiplot.edge_cuts.yml  .kiplot.yml  .~lock.cpl.csv#  .~lock.ferris-all-pos.csv#  Dockerfile  LICENSE  Makefile  bom.csv  bom.ini  build.ninja  configure.py  cpl.csv  ferris  ferris-B_Cu.gbr  ferris-B_Mask.gbr  ferris-B_Paste.gbr  ferris-B_SilkS.gbr  ferris-Edge_Cuts.gbr  ferris-F_Cu.gbr  ferris-F_Mask.gbr  ferris-F_Paste.gbr  ferris-F_SilkS.gbr  ferris-NPTH.drl  ferris-PTH.drl  ferris-all-pos.csv  ferris-all.pos  ferris-bottom.pos  ferris-cache.lib  ferris-job.gbrjob  ferris-rescue.lib  ferris-top.pos  ferris.kicad_pcb  ferris.kicad_pcb-bak  ferris.net  ferris.pro  ferris.sch  fp-info-cache  (+9 more)
0.1/: bom.csv  readme.md
0.1/low/: ferris.kicad_pcb  ferris.net  ferris.sch  ferris.xml  fp-lib-table  meson.build  readme.md  sym-lib-table
0.2/: readme.md
MX_Only.pretty/: MXOnly-1.25U-FLIPPED.kicad_mod  MXOnly-1.25U-Hotswap.kicad_mod  MXOnly-1.25U-NoLED.kicad_mod  MXOnly-1.25U.kicad_mod  MXOnly-1.5U-FLIPPED.kicad_mod  MXOnly-1.5U-Hotswap.kicad_mod  MXOnly-1.5U-NoLED.kicad_mod  MXOnly-1.5U-Vertical-NoLED.kicad_mod  MXOnly-1.5U-Vertical.kicad_mod  MXOnly-1.5U.kicad_mod  MXOnly-1.75U-FLIPPED.kicad_mod  MXOnly-1.75U-Hotswap.kicad_mod  MXOnly-1.75U-NoLED.kicad_mod  MXOnly-1.75U.kicad_mod  MXOnly-1U-FLIPPED.kicad_mod  MXOnly-1U-Hotswap-Antishear.kicad_mod  MXOnly-1U-Hotswap.kicad_mod  MXOnly-1U-NoLED.kicad_mod  MXOnly-1U.kicad_mod  MXOnly-2.25U-FLIPPED-ReversedStabilizers.kicad_mod  MXOnly-2.25U-FLIPPED.kicad_mod  (+61 more)
(+157 files in other folders)
